--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   jupyterlab:
-    image: "uwhackweek/template:latest"
+    image: "uwgda/uwgda-image-2023:latest"
     ports:
       - "8888:8888"
     command: "jupyter lab --ip 0.0.0.0 --no-browser"
